--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es2018",
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
@@ -24,6 +24,7 @@
     "lib": [
       "esnext",
       "dom",
+      "es2015",
       "dom.iterable",
       "scripthost"
     ]
